<resources>
    <string name="app_name">Radioyo</string>
    <string name="about_app_name_and_version">Radioyo v1.01, 2022</string>
    <string name="about_created_by">Created by John Crawley</string>
    <string name="radioyo_graphic">Radio-yo title graphic</string>
    <string name="about_app_ok_button_text">Done</string>
    <string name="no_stations_text">No Stations Saved</string>
    <string name="play_button_text">Play</string>
    <string name="stop_button_text">Stop</string>
    <string name="input_text_label_station_name">Name</string>
    <string name="input_text_label_station_url">URL</string>
    <string name="input_text_label_station_description">Description</string>
    <string name="input_text_label_station_link">Website Link</string>
    <string name="add_station_title">Add Station</string>
    <string name="station_library_title">Station Library</string>
    <string name="add_station_cancel_button">Cancel</string>
    <string name="add_station_save_button">Save</string>
    <string name="menu_item_add_station">Add Station</string>
    <string name="menu_item_about">About</string>
    <string name="menu_item_library">Library</string>
    <string name="update_station_delete_button">Remove</string>
    <string name="update_station_update_button">Update</string>
    <string name="update_station_dialog_title">Edit Station Details</string>
    <string name="notification_title">WebRadio</string>
    <string name="status_ready">Ready</string>
    <string name="status_nothing_selected">Select A Station</string>
    <string name="status_add_a_station_to_begin">Add A Station To Begin</string>
    <string name="website_link">Website</string>
    <string name="add_station_big_button_content_description">Add A Station</string>
    <string name="status_connecting">Connecting</string>
    <string name="status_playing">Playing</string>
    <string name="status_error">Unable To Connect</string>
    <string name="status_error_loading_file">Unable To Get Url From File</string>
    <string name="default_station_name_text_view">Select a Station</string>
    <string name="notification_button_title_play">Play</string>
    <string name="notification_button_title_stop">Stop</string>
    <string name="notification_button_title_previous">Previous</string>
    <string name="notification_button_title_next">Next</string>
    <string name="content_description_delete_button">Remove Station</string>
    <string name="genre_spinner_label">Genre</string>
    <string name="library_done_button">Done</string>
    <string name="delete_station_confirmation_dialog_text">Are you sure you want to remove this station? This cannot be undone.</string>
    <string name="remove_station_from_favourites_confirmation_dialog_text">Are you sure you want to remove this station from the list?</string>
    <string name="faq_dialog_title">FAQ</string>
    <string name="faq_button_text">FAQ</string>
    <string name="faq_question_1">How do I edit or remove stations?</string>
    <string name="faq_answer_1">To quickly remove a station from the main list, you can click and hold on that list item. To edit station info or delete a station entry completely, open the Station Library dialog and click and hold on the corresponding item.</string>
    <string name="faq_question_2">Where can I find more radio stations?</string>
    <string name="faq_answer_2">www.internet-radio.com and www.radiomap.eu have lots of stations featuring different genres.</string>
    <string name="faq_question_3">Can I get station information from playlist files?</string>
    <string name="faq_answer_3">In the "Add Station" dialog, you can browse for, and open, a file with the .m3u or .txt extension from your device\'s file system. Only the first line will be processed.</string>
    <string name="faq_question_4">I loaded a .m3u file, but when I try to play the station, nothing happens.</string>
    <string name="faq_answer_4">Check the station URL. If it points to a .pls (playlist) file, you will need to copy the whole URL into a web browser and download the file. That should contain a URL that can be used to directly stream the audio. Also keep in mind that the code for parsing the .m3u files is very rudimentary and will only read the first line.</string>
    <string name="genre_user_label">User</string>
    <string name="selected_station_list_item_content_description">selected</string>
    <string name="unselected_station_list_item_content_description">unselected</string>
</resources>