<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:paddingHorizontal="@dimen/dialog_edit_text_horizontal_padding"
    android:layout_height="match_parent">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/edit_text_padding_top">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/stationUrlEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textImeMultiLine"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:hint="@string/input_text_label_station_url" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/edit_text_padding_top">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/stationNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textImeMultiLine"
            android:maxLength="32"
            android:maxLines="1"
            android:hint="@string/input_text_label_station_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/edit_text_padding_top">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/linkEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:maxLength="64"
            android:inputType="textImeMultiLine"
            android:maxLines="1"
            android:hint="@string/input_text_label_station_link" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>